<resources>
    <string name="app_name">Countries</string>
    <string name="db_name">countries-db</string>
    <string name="internal_error">Check your internet.</string>
    <string name="api_error">Something went wrong,\n please try again later.</string>
    <string name="loading">Loading…</string>
    <string name="error">Error!</string>
    <string name="try_again">Try again</string>
    <string name="home">Home</string>
    <string name="ranking">Ranking</string>
    <string name="quiz">Quiz</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="weekly">Weekly</string>
    <string name="all">All</string>
    <string name="ranking_position">#4</string>
    <string name="you_are_better_than_x_percent_of_other_players">You are better than 60% of other players</string>
    <string name="congratulations">Congratulations! 🎉</string>
    <string name="you_got_it_right">You got it right! The name of the country is %1$s.</string>
    <string name="better_luck_next_time">Too bad! ❌</string>
    <string name="the_correct_answer_is">The correct answer is %1$s.\nTry again!</string>
    <string name="select_a_option">Select an option</string>
    <string name="greeting">Hi</string>
    <string name="invitation">Ready to explore the world?</string>
    <string name="notification_icon_description">notification icon</string>
    <string name="most_popular">Most Popular</string>
    <string name="bordering_countries">Countries that share a border</string>
    <string name="capital">Capital</string>
    <string name="continent">Continent</string>
    <string name="population">Population</string>
    <string name="number_of_borders">Number of bordering countries</string>
    <string name="notification_channel_name">General Notifications</string>>
    <string name="notification_channel_description">Stay informed with important updates, news, and alerts.</string>
    <string name="discover_new_curiosities">🌍 Discover New Curiosities!</string>
    <string name="notification_explain_description">Allow notifications to receive interesting facts, and special content about countries around the world.</string>
    <string name="notification_explain_benefits">📚  Fascinating facts about countries.\n🧠  Challenge yourself with quizzes.\n🚀  Updates about new app features.</string>
    <string name="notification_explain_allow_button">Allow notifications</string>
    <string name="notification_explain_deny_button">Maybe later</string>
    <string name="open_settings">Open settings</string>
    <string name="firebase_topic">countries-curiosities</string>
</resources>