<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/app_dimen_10"
    android:paddingBottom="@dimen/app_dimen_10">

    <View
        android:layout_width="30dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_dimen_6"
        android:background="@color/color_858494" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_dimen_10"
        android:contentDescription="@string/notification_icon_description"
        android:src="@drawable/notification_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_dimen_10"
        android:gravity="center"
        android:text="@string/discover_new_curiosities"
        android:textColor="@color/color_0C092A"
        android:textSize="@dimen/app_text_size_7"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_dimen_8"
        android:gravity="center"
        android:text="@string/notification_explain_description"
        android:textSize="@dimen/app_text_size_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_dimen_8"
        android:text="@string/notification_explain_benefits"
        android:textColor="@color/color_313131"
        android:textSize="@dimen/app_text_size_4"
        app:lineHeight="@dimen/app_text_size_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_dimen_10"
        android:text="@string/notification_explain_allow_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/maybeLaterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_dimen_8"
        android:paddingHorizontal="@dimen/app_dimen_10"
        android:paddingVertical="@dimen/app_dimen_5"
        android:text="@string/notification_explain_deny_button"
        android:textColor="@color/color_858494"
        android:textSize="@dimen/app_text_size_3" />

</LinearLayout>
