<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feedback_container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent=".60"
        app:lottie_autoPlay="true"
        app:lottie_fileName="error_view.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/feedback_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_dimen_16"
        android:layout_marginBottom="@dimen/app_dimen_10"
        android:textAlignment="center"
        android:textSize="@dimen/app_text_size_8"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/error" />

    <TextView
        android:id="@+id/feedback_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_dimen_16"
        android:layout_marginTop="@dimen/app_dimen_8"
        android:lineSpacingExtra="@dimen/app_dimen_3"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/feedback_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/api_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/feedback_button"
        style="@style/Widget.MaterialComponents.Badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/feedback_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/try_again" />

</androidx.constraintlayout.widget.ConstraintLayout>